--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
 Django==1.9.4
+django-appconf==1.0.1
+django-compressor==2.0
 django-taggit==0.18.0
 Pillow==3.1.1
+rcssmin==1.0.6
+rjsmin==1.0.12
 selenium==2.53.1
+six==1.10.0
